--- a/browser.html
+++ b/browser.html
@@ -17,16 +17,15 @@
         </div>
         <div class="contentpanel">
             <div class=tabstrip>
-                <div class="tab active">Active Tab</div>
-                <div class="tab">Inactive tab</div>
             </div>
-            Query Panel
+            
         </div>
         <div id="notifications">
         </div>
         
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="components/DataCollectionTree.js"></script>
+        <script src="components/TableDataCollectionView.js"></script>
         <script src="javascript/browser.js"></script>
     </body> 
 </html>
